public/css/style.css
:root {
    /* Color Splash variables */
    --mp1: #E68DF2;
    --mp2: #AE4AD9;
    --mp3: #5A278C;
    --mp4: #100626;
    --mp5: #2A1459;

    /* Northern Lights variables */
    --am1: #04BF9D;
    --am2: #04BFAD;
    --am3: #027373;
    --am4: #5FCDD9;
    --am5: #172026;
}

/* Color Splash in HEX */
.mp1-hex {
    color: #E68DF2;
}

.mp2-hex {
    color: #AE4AD9;
}

.mp3-hex {
    color: #5A278C;
}

.mp4-hex {
    color: #100626;
}

.mp5-hex {
    color: #2A1459;
}

/* Northern lights in HEX */
.am1-hex {
    color: #04BF9D;
}

.am2-hex {
    color: #04BFAD;
}

.am3-hex {
    color: #027373;
}

.am4-hex {
    color: #5FCDD9;
}

.am5-hex {
    color: #172026;
}


body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    background: rgb(16, 6, 38);
    background: linear-gradient(90deg, rgba(16, 6, 38, 1) 0%, rgba(0, 0, 0, 1) 50%, rgba(16, 6, 38, 1) 100%);
}

header {
    background: url('../assets/images/homepage-header-image.jpg');
    background-repeat: no-repeat;
    background-size: 100% 100%;
    background-color: #100626;
    border-bottom: #5A278C solid 5px;
}

header h1 {
    font-family: 'Cinzel', serif;
    color: #f2f2f2;
    text-shadow:
        0 0 7px #04BFAD,
        0 0 10px #04BFAD,
        0 0 21px #fff,
        0 0 42px #0fa,
        0 0 82px #0fa,
        0 0 92px #04BFAD;
}

header p {
    font-family: 'Merienda', serif;
    font-size: 1.75rem;
}

form {
    margin: 10px;
}

nav {
    background-color: var(--mp5);
}

.loginPortal {
    background: url('../assets/images/login-portal-image-b.jpg');
    background-size: 100% 100%;
    border: #04BF9D solid 2px;
    border-radius: 5px;
    width: 20%;
    margin: 0 auto;
}

.loginPortal button {
    font-family: 'Cinzel', serif;
    font-size: 1.5rem;
    color: #100626;
    text-shadow:
        0 0 7px #04BFAD,
        0 0 10px #04BFAD,
        0 0 21px #fff;
    border: #04BFAD solid 2px;
    background-color: rgba(0, 0, 0, .8);
    width: 100%;
    transition-duration: .2s;
}

.loginPortal button:hover {
    background-color: #000;
    border: #E68DF2 solid 2px;
    color: #f2f2f2;
    text-shadow:
        0 0 7px #AE4AD9,
        0 0 10px #E68DF2,
        0 0 21px #fff;
}

#myCarousel {
    margin: 1% auto;
    width: 50%;
}

.carousel-inner {
    margin: auto;
    width: 80%;
    border: #5A278C solid 3px;
    border-radius: 5px;
    box-shadow: 
    0 0 15px #fff,
    0 0 25px rgb(179, 253, 238),
    0 0 26px #0fa,
    0 0 27px #0fa,
    0 0 28px #04BFAD;
}

.symbol {
    border: #5A278C solid 3px;
    border-radius: 120px;
    box-shadow: 
        0 0 15px #fff,
        0 0 16px #5A278C,
        0 0 17px #AE4AD9,
        0 0 18px #E68DF2;
    width: 60%;
}

.nav-link {
    color: #f2f2f2;
    font-family: 'Gruppo', serif;
    font-size: 1.5rem;
    text-shadow:
        0 0 7px #04BFAD,
        0 0 10px #04BFAD,
        0 0 21px #fff;
}

.navbar-brand {
    color: #f2f2f2;
    font-family: 'Cinzel', serif;
    font-size: 2rem;
    text-shadow:
        0 0 7px #04BFAD,
        0 0 10px #04BFAD,
        0 0 21px #fff,
        0 0 42px #0fa;
}

/* Styling for the titles used on decks and decklist pages */
.deck-title {
    font-family: 'Cinzel', serif;
    color: #f2f2f2;
    text-shadow:
        0 0 7px #04BFAD,
        0 0 10px #04BFAD,
        0 0 21px #fff,
        0 0 42px #0fa,
        0 0 82px #0fa,
        0 0 92px #04BFAD;
    font-size: 200%;
}

/* bg color for the card used on decks page */
.deck-bg {
    background-color: var(--mp5);
    border: 3px solid var(--mp3);
}

.deck-names {
    background-color: var(--am5);
    color: var(--mp1);
    border: none;
    margin-bottom: 2%;
    font-family: 'Merienda', serif;
}

.editBtn {
    color: var(--mp1);
    background-color: transparent;
    border: transparent;
}

.editBtn:hover {
    color: white;
}

.deleteBtn {
    color: var(--mp1);
    background-color: transparent;
    border: transparent;
}

.deleteBtn:hover {
    color: white;
}

.deck-link:hover {
    color: white;
    cursor: pointer;
}

/* custom card is used in decklist page for the <aside> cards*/
.custom-card {
    height: 25rem;
    width: 100%;
    margin-top: 5%;
    border: 2px solid var(--am1);
    background-color: var(--mp3);
    background-image: url('../assets/images/login-portal-image.jpg');
    background-size: cover;
    box-shadow: 0 0 5px 2px var(--mp1);
}

.search-title {
    font-family: 'Cinzel', serif;
    font-size: 1.5rem;
    color: #f2f2f2;
    text-shadow:
        0 0 7px #AE4AD9,
        0 0 10px #E68DF2,
        0 0 21px #fff;
}

#card-search {
    width: 100%;
}

.deck-list-body {
    height: 50rem;
    width: 100%;
    margin-top: 2%;
    border: 2px solid var(--am1);
    background-color: var(--mp3);
    background-image: url('../assets/images/login-portal-image.jpg');
    background-size: cover;
    box-shadow: 0 0 5px 2px var(--mp1);
    /* If the amount of cards in their deck exceeds the available space, the user will be able to scroll */
    overflow: scroll;
}

#deck-list {
    width: 80%;
}

#side-nav {
    width: 20%;
}

.list-title {
    font-family: 'Cinzel', serif;
    font-size: 2.5rem;
    color: #f2f2f2;
    text-shadow:
        0 0 7px #AE4AD9,
        0 0 10px #E68DF2,
        0 0 21px #fff;
    margin-top: 1%;
    width: 100%;
    border: 1px solid var(--am2);
    padding-top: 1%;
    padding-bottom: 1%;
    border-radius: 1rem;
}

.no-list {
    list-style: none;
}

.card-type {
    font-family: 'Cinzel', serif;
    color: #f2f2f2;
    text-shadow:
        0 0 7px #04BFAD,
        0 0 10px #04BFAD,
        0 0 21px #fff,
        0 0 42px #0fa,
        0 0 82px #0fa,
        0 0 92px #04BFAD;
    font-size: 1.35rem;
    text-align: center;
    border: 1px solid var(--am4);
    border-radius: 1rem;
    padding-top: 1%;
    padding-bottom: 1%;
}

.added-card {
    font-family: 'Merienda', serif;
    color: var(--mp1);
    font-size: 1rem;
}

.deck-list-btns {
    color: var(--mp1);
    background-color: transparent;
    border: transparent;
    margin-left: 2%;
    font-size: 2rem;
}
.deck-list-btns:hover {
    cursor: pointer;
    color: white;
    font-size: 2.5rem;
}
.decks-btns {
    background-color: transparent;
    border: none;
}
/* #card-name-results {
    font-family: 'Merienda', serif;
    color: var(--mp1);
    font-size: 1rem;
    text-align: center;
    margin: auto;
    height: 50%;
    max-height: 50%;
} */
/* dynamically created button in decklist.js */
.result-btn {
    border: none;
    background-color: transparent;
    color: var(--am4);
}
.result-btn:hover {
    color: white;
}
.ui-autocomplete {
    max-height: 19rem;
    overflow-y: auto;
    /* prevent horizontal scrollbar */
    overflow-x: hidden;
    font-family: 'Merienda', serif;
    color: var(--am1);
    background-color: rgba(0, 0, 0, .9);
  }
  .ui-menu-item-wrapper:hover {
    background-color: var(--mp1);
    color: var(--am5);
    font-size: 120%;
  }

